# Chess

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  THIRD_PARTY.md  vcpkg.json
include/: application.h  chess.h
include/application/chess/application/: application.h  chess.h  layer.h  texture.h
include/core/chess/core/: bitboard.h  board.h  constants.h  fen.h  game.h  move.h  moves.h  perft.h  piece.h  square.h  state.h  types.h
include/engine/chess/engine/: engine.h
include/game/chess/game/: game.h  state.h
include/test/chess/test/: perft.h  stockfish.h  utils.h
src/: application.cpp  chess.cpp  main.cpp
src/application/: application.cpp  chess.cpp  main.cpp  texture.cpp
src/benchmark/: benchmark.cpp
src/core/: bitboard.cpp  board.cpp  fen.cpp  game.cpp  move.cpp  moves.cpp  perft.cpp  piece.cpp  square.cpp
src/engine/: engine.cpp
src/game/: game.cpp
src/test/: debug.cpp  perft.cpp  stockfish.cpp  test.cpp  test_engine.cpp  test_game.cpp  utils.cpp
